--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+
+    <script
+      src="https://kit.fontawesome.com/e391ce7786.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Rock, Paper, Scissors</title>
   </head>
